# A.R.E.A

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build_mobile.sh  docker-bake.hcl  docker-compose.yml  flake.nix  setup_mobile.sh
.github/workflows/: actions.yaml  aws_deploy.yaml
PoC/Backend/: docker-compose.yml
PoC_Backend/: docker-compose.yml
PoC_Backend/cpp_router/: CMakeLists.txt  main.cpp  shell.nix
PoC_Backend/csharp_router/: Dockerfile  router.sln
PoC_Backend/javascript_router/: Dockerfile
PoC_Backend/python_router/: main.py
PoC_Database/: docker-compose.yml
PoC_Frontend/: flake.nix
PoC_Frontend/angular_poc/: README.md  angular.json  package-lock.json  package.json
area-doc/: Dockerfile  package-lock.json  package.json
area-doc/docs/: README.md  backend-tech-doc.md  frontend-tech-doc.md  introduction.md  technical-doc.md
client/: Dockerfile  apk.Dockerfile  axios.js  capacitor.config.json  index.html  package-lock.json  package.json  tests.sh  vite.config.js  vue.config.js
client/src/: App.vue  main.js
client/test/: Login.test.js
data/service_storage/: services.yml
lib/protocol/: __init__.py
lib/service_mod/: __init__.py
lib/serviceconf/: __init__.py  services.yml
services/: README.md
services/about/: main.py
services/action/: main.py
services/advanced/: AdvancedServices.sln  Dockerfile  tests.sh
services/oauth/: Dockerfile  main.py
services/reaction/: main.py
services/router/: Cargo.toml  Dockerfile  openapi.json  routes.yml
services/swagger/: Dockerfile  index.js  (+3 more)
tools/: generate-docker-bake.py
(+271 files in other folders)
